home section done

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html data-theme="coffee" lang="en">
+<html data-theme="corporate" lang="en">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
@@ -9,6 +9,10 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <!-- aos link  -->
+    <link rel="stylesheet" href="bower_components/aos/dist/aos.css" />
+
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -39,5 +43,11 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+
+    <!-- aos script  -->
+    <script src="bower_components/aos/dist/aos.js"></script> 
+    <script>
+      AOS.init();
+    </script>
   </body>
 </html>
